adicionando itens hardcoded
*Temporariamente*

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      ::-webkit-scrollbar{
+        width: 5px;
+        height: 0px;
+        background-color: rgb(73, 73, 73);
+        
+      }
+      ::-webkit-scrollbar-thumb{
+        background-color: #0B132B;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
